implementacion de bus por Cristian Loaiza

--- a/TALLER_GIT/nbproject/private/private.properties
+++ b/TALLER_GIT/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Juan\\.netbeans\\7.1\\build.properties
+user.properties.file=/afs/eisc/user/pregrado/2009/cdariolo/.netbeans/7.1.1/build.properties
